--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="info" id="my-resume">
                     <h3 > For more information </h3>
-                    <a class="resume"  href="/RatebAlnaalResume.pdf" download="dawnload CV"> Dawnload Resume </a>
+                    <a class="resume"  href="./RatebAlnaalResume.pdf" download="dawnload CV"> Dawnload Resume </a>
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/adidas.png" alt="adidas website"> 
+                    <img src="./adidas.png" alt="adidas website"> 
                 </div>
                 <div class="project-info">
                     <p class="project-category"> HTML & CSS Website  </p>
@@ -90,7 +90,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/avatar.png" alt="avatar website"> 
+                    <img src="./avatar.png" alt="avatar website"> 
                 </div>
                 <div class="project-info">
                     <p class="project-category"> HTML & CSS Website  </p>
@@ -103,7 +103,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/dashboard.png" alt="dashboard website"> 
+                    <img src="./dashboard.png" alt="dashboard website"> 
                 </div>
                 <div class="project-info">
                     <p class="project-category"> HTML & CSS Website  </p>
@@ -116,7 +116,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/hover-menu.png" alt="hover menu website"> 
+                    <img src="./hover-menu.png" alt="hover menu website"> 
                 </div>
                 <div class="project-info">
                     <p class="project-category"> HTML & CSS Website  </p>
