--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Rateb Alnaal Devlopper]</title>
+    <title>[Rateb Alnaal Developer]</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
@@ -21,7 +21,7 @@
     <section class="main">
     <div>                         <!--Say something about yourself -->
 <h2> Hello, I'm Rateb <br>          
-    <span> Front End Devlopper </span>
+    <span> Front End Developer </span>
 </h2>
 <h3> Make your website happy  </h3>          <!--Something that shortens you -->
 <a href="#projects" class="main-btn"> Veiw my work  </a>
