--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <h3>Make your website joyful</h3>          <!--Something that shortens you -->
 <a href="#projects" class="main-btn"> Veiw my work  </a>
         <div class="social-icons">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/ratepnaal?igsh=MXdkbTNhaWd2dHUybA=="><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/ratep.naal.3?mibextid=ZbWKwL"><i class="fab fa-facebook"></i></a>
-            <a href="https://github.com/ratepnaal"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/rateb-alnaal-a51067314/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/ratepnaal?igsh=MXdkbTNhaWd2dHUybA==" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/ratep.naal.3?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="https://github.com/ratepnaal" target="_blank"><i class="fab fa-github"></i></a>
         </div>
         </div>
     </section>
@@ -44,7 +44,7 @@
                 <div class="info">
                     <h3> Summary about me </h3>
                     <p>Passionate second-year IT student and front-end developer specializing in HTML, CSS, 
-                        and JavaScript. Committed to creating user-friendly and visually appealing web applications.
+                        and JavaScript and framework React Js. Committed to creating user-friendly and visually appealing web applications.
                          Seeking opportunities for learning, growth, and collaboration.
                           Contact me for creative solutions and critical thinking projects.</p>
                 </div>
@@ -55,11 +55,10 @@
                 </div>
                 <div class="info">
                     <h3> Search for </h3>
-                    <p> I am actively seeking a junior position in front-end development to enhance my skills,
-                         particularly in React JS, which I am currently learning.
-                          I am interested in both office-based and remote job opportunities in Damascus,
-                           its suburbs, and surrounding areas.
-                        </p>
+                    <p> Seeking a Junior Front-End Developer position to apply my skills in React and 
+                        front-end development. I am eager to join a dynamic team where I can enhance my
+                         technical abilities and contribute to creating outstanding web experiences.
+                    </p>
                 </div>
             </div>
             <div class="card" id="resume">
@@ -68,7 +67,7 @@
                 </div>
                 <div class="info" id="my-resume">
                     <h3 > For more information </h3>
-                    <a class="resume"  href="./RatebAlnaalResume.pdf" download=" Rateb Alnaal CV"> Dawnload Resume </a>
+                    <a class="resume"  href="Rateb-Alnaal-CV.pdf" download=" Rateb Alnaal CV"> Dawnload Resume </a>
                 </div>
             </div>
         </div>
@@ -160,6 +159,7 @@
     <a href="mailto:ratepn445@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
     <a href="tel:+963959547610" target="_blank"><i class="fas fa-phone"></i></a>
     <a href="https://github.com/ratepnaal" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/rateb-alnaal-a51067314/" target="_blank"><i class="fab fa-linkedin"></i></a>
 </div>
     </footer>
 </html>
