--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="./adidas.png" alt="adidas website"> 
+                    <img src="./Tailwind website.png" alt="adidas website"> 
                 </div>
                 <div class="project-info">
                     <p class="project-category"> HTML & CSS Website  </p>
                     <strong class="project-title">
-                        <span> Interface Adidas Website  </span>
-                        <a href="https://ratepnaal.github.io/Adidas-website-interface-model/" class="more-details" target="_blank"> See Live </a>
-                        <a href="https://github.com/ratepnaal/Adidas-website-interface-model" class="more-details" target="_blank">Show Code </a>
+                        <span> Interface Tailwind CSS </span>
+                        <a href="https://ratepnaal.github.io/Website-Tailwind/" class="more-details" target="_blank"> See Live </a>
+                        <a href="https://github.com/ratepnaal/Website-Tailwind.git" class="more-details" target="_blank">Show Code </a>
                     </strong>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="info">
                     <h3> Phone </h3>
-                   <a class="mail" href="tel:+963959547610">Call Now</a>
+                   <a class="mail" href="tel:+963959547610"> Call Now  </a>
                 </div>
             </div>
             <div class="card">
@@ -148,7 +148,6 @@
                 <div class="info">
                     <h3> Email </h3>
                     <a class="mail" href="mailto:ratepn445@gmail.com" target="_blank"> Send Me Email </a>
-
                 </div>
             </div>
     </section>
